ajusto detalles, no logro darme cuenta como implementar el frontend

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -4,6 +4,9 @@
   {{/if}}
   <h2>Lista de productos</h2>
   <article>
+    {{#if user}}
+      <a href="/views/carts/{{user.cartId}}" role="button" id="goToCartBtn">Ir al Carrito</a>
+    {{/if}}
     <table>
       <tr>
         {{!-- <th>Id</th> --}}
@@ -27,7 +30,7 @@
           <td>{{this.status}} </td>
           <td>{{this.stock}} </td>
           <td>{{this.category}} </td>
-          <td><a href="" role="button">Agregar al Carrito</a></td>
+          <td><a href="#" role="button" class="addToCartBtn" data-product-id="{{this._id}}">Agregar al Carrito</a></td>
         </tr>
         {{/each}}
       </tbody>
