--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,6 +1,9 @@
 <article>
     <form action="/api/sessions/login" method="post">
-        <header><h1>Inicio de session</h1></header>
+        <header><h1>Inicio de sesión</h1></header>
+        {{#if error}}
+            <p style="color: red;">{{error}}</p>
+        {{/if}}
         <input type="text" name="email" placeholder="correo" required>
         <input type="password" name="password" placeholder="contraseña" required>
         <footer>
