trato de hacer andar los botones de agregar al carrito

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -40,3 +40,5 @@
     <a href="{{products.nextLink}}" role="button" {{#unless products.hasNextPage}}disabled{{/unless}}>Siguiente</a>
   </article>
 </div>
+<script src="/socket.io/socket.io.js"></script>
+<script src="/js/index.js"></script>
