--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
   <title>{{title}}</title>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/index.js"></script>
 </head>
 <body>
   <main class="container">
