--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -41,4 +41,5 @@
   </article>
 </div>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/dist/index.umd.min.js"></script>
+<script src="/js/addToCart.js"></script>
