Me falta arreglar la renderización del ticket

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -10,3 +10,9 @@
     </div>
   {{/each}}
 </div>
+<div>
+  {{!-- Otras secciones del carrito --}}
+  <h2>Total de la compra: ${{totalAmount}}</h2>
+  <a href="/views/checkout" role="button" id="checkoutBtn">Finalizar Compra</a>
+</div>
+<script src="/js/addToCart.js"></script>
